--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,58 @@ body{
 
 header , footer{
     text-align: center;
-    width: 400px;
+    width: 300px;
     margin: 30px auto 0px auto;
 }
 
 main{
-    width: 400px;
+    width: 300px;
     margin: 30px auto 0px auto;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    font-size: 18px;
+}
+label{
+    display: block;
+    margin-bottom: 10px;
+}
+input{
+    display: inline;
+    font-family: 'Poppins', sans-serif;
+    width: 236px;
+    border:1px solid #ced4da ;
+    padding: 10px;
+    border-radius: 0px 5px 5px 0px;
+    font-weight: 200;
+    font-size: 18px;
+}
+input[type="submit"]{
+    background-color: #fd0c49;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 400;
+    width: 100%;
+}
+select {
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+    border: 1px solid #ced4da;
+    font-weight: 200;
+    font-size: 18px;
+}
+/* ID y Clases*/
+#nicka{
+    font-family: 'Poppins', sans-serif;
+    float: left;
+    text-align: center;
+    width: 20px;
+    border: 1px solid #ced4da;
+    border-radius: 5px 0px 0px 5px;
+    padding: 10px;
+    background-color: #ced4da;
+    font-weight: 400;
+    font-size: 18px;
 }
