--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,13 @@ input{
     font-weight: 200;
     font-size: 18px;
 }
+input[type="email"]{
+    border: 1px solid #ced4da;
+    font-weight: 200;
+    font-size:18px;
+    border-radius: 5px;
+    width: 278px;
+}
 input[type="submit"]{
     background-color: #fd0c49;
     color: #fff;
@@ -49,6 +56,10 @@ select {
 }
 footer{
     font-weight: 100;
+}
+p{
+    font-weight: 100;
+    font-size: 14px;
 }
 /* ID y Clases*/
 #nicka{
@@ -67,4 +78,35 @@ footer{
     font-weight: 200;
     text-align: center;
     color: #fd0c49;
+}
+.avatarItem{
+    background-color: #fff;
+    border: solid 1px #fd0c49;
+    width: 40px;
+    height: 40px;
+    padding-top: 5px;
+    padding-left: 5px;
+
+}
+#avatar{
+    float: left;
+}
+#avatarContainer{
+    display: flex;
+    background-color: #fff;
+    border: solid 1px #fd0c49;
+    border-radius: 5px;
+    width: 125px;
+    height: 125px;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+#avatargrid{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-top: 30px;
 }
